# advent-of-code-2024

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
day_01_historian_hysteria/: Cargo.toml
day_01_historian_hysteria/src/: main.rs
day_01_historian_hysteria/src/puzzle/: locations.rs  solver.rs
day_02_rednosed_reports/: Cargo.toml
day_02_rednosed_reports/src/puzzle/: mod.rs  parser.rs  report.rs  solver.rs
day_03_mull_it_over/: Cargo.toml
day_03_mull_it_over/src/puzzle/: instruction.rs  mod.rs  parser.rs  solver.rs
day_04_ceres_search/: Cargo.toml
day_04_ceres_search/src/puzzle/: grid.rs  parser.rs  solver.rs
day_05_print_queue/: Cargo.toml
day_05_print_queue/src/puzzle/: later_numbers.rs  mod.rs  page.rs  parser.rs  print_queue.rs  solver.rs
day_06_guard_gallivant/: Cargo.toml
day_06_guard_gallivant/src/puzzle/: direction.rs  guard.rs  maze.rs  maze_object.rs  mod.rs  parser.rs  position.rs  solver.rs
day_07_bridge_repair/: Cargo.toml
day_07_bridge_repair/src/puzzle/: equation.rs  equation_state.rs  mod.rs  operation.rs  parser.rs  solver.rs
day_08_resonant_collinearity/: Cargo.toml
day_09_disk_fragmenter/: Cargo.toml
day_10_hoof_it/: Cargo.toml
day_11_plutonian_pebbles/: Cargo.toml
day_12_garden_groups/: Cargo.toml
day_13_claw_contraption/: Cargo.toml
day_14_restroom_redoubt/: Cargo.toml
day_15_warehouse_woes/: Cargo.toml
day_16_reindeer_maze/: Cargo.toml
day_17_chronospatial_computer/: Cargo.toml
day_18_ram_run/: Cargo.toml
day_19_linen_layout/: Cargo.toml
day_20_race_condition/: Cargo.toml
(+97 files in other folders)
