[workspace]
resolver = "2"
members = [
    "day_01_historian_hysteria",
    "day_02_rednosed_reports",
    "day_03_mull_it_over",
    "day_04_ceres_search",
    "day_05_print_queue",
    "day_06_guard_gallivant",
    "day_07_bridge_repair",
    "day_08_resonant_collinearity",
    "day_09_disk_fragmenter",
    "day_10_hoof_it",
    "day_11_plutonian_pebbles",
    "day_12_garden_groups",
    "day_13_claw_contraption",
    "day_14_restroom_redoubt",
    "day_15_warehouse_woes",
    "day_16_reindeer_maze",
    "day_17_chronospatial_computer",
    "day_18_ram_run",
    "day_19_linen_layout"
]